--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -1,7 +1,7 @@
-<div class="row">
+<div class="row" style="margin: 0 1px">
   <%= form_tag '/search', method: :get do %>
 
-    Search for makeup:<br>
+    Search for makeup products:<br>
     <%= text_field_tag :keyword %>
     <%= submit_tag 'Search', class: 'button' %>
 
