--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,40 +1,48 @@
 <h1>Profile</h1>
 <p><%= link_to "Add a Product", '/products/new' %></p>
 
-<div class="row small-up-1 medium-up-2 large-up-3">
-  <h3><%= link_to 'Traincase', '/traincase' %></h3>
+<div class="row">
 
-    <p class="lead">Recently Added</p>
+  <div class="small-12 medium-6 large-6 columns">
 
-  <% @traincase.each do |item| %>
-    <div class="column">
-      <div class="callout">
-        <p><a href="/products/<%= item.id %>"><%= image_tag "#{item.image}", class: 'thumbnail' %></a></p>
-        <p class="">Product Name: <%= item.name %><br>
-        Brand: <%= item.brand %><br>
-        Product Type: <%= item.product_type %></p>
-      </div>
+    <div class="row small-up-1 medium-up-2 large-up-2" style="margin: 0 5px 0 0">
+      <h3><%= link_to 'Traincase', '/traincase' %></h3>
+
+        <p class="lead">Recently Added</p>
+
+      <% @traincase.each do |item| %>
+        <div class="columns">
+          <div class="callout">
+            <p><a href="/products/<%= item.id %>"><%= image_tag "#{item.image}", class: 'thumbnail' %></a></p>
+            <p class="">Product Name: <%= item.name %><br>
+            Brand: <%= item.brand %><br>
+            Product Type: <%= item.product_type %></p>
+          </div>
+        </div>
+      <% end %>
     </div>
-  <% end %>
-</div>
 
-<div class="row column">
-  <hr>
-</div>
+  </div>
 
-<div class="row small-up-1 medium-up-2 large-up-3">
-  <h3><%= link_to 'Wishlist', '/wishlist' %></h3>
+  <div class="small-12 medium-6 large-6 columns">
 
-    <p class="lead">Recently Added</p>
+    <div class="row small-up-1 medium-up-6 large-up-2" style="margin: 0 0 0 5px">
+      <h3><%= link_to 'Wishlist', '/wishlist' %></h3>
 
-  <% @wishlist.each do |item| %>
-    <div class="column">
-      <div class="callout">
-        <p><a href="/products/<%= item.id %>"><%= image_tag "#{item.image}", class: 'thumbnail' %></a><br>
-        Product Name: <%= item.name %><br>
-        Brand: <%= item.brand %><br>
-        Product Type: <%= item.product_type %></p>
-      </div>
+        <p class="lead">Recently Added</p>
+
+      <% @wishlist.each do |item| %>
+        <div class="columns">
+          <div class="callout">
+            <p><a href="/products/<%= item.id %>"><%= image_tag "#{item.image}", class: 'thumbnail' %></a><br>
+            Product Name: <%= item.name %><br>
+            Brand: <%= item.brand %><br>
+            Product Type: <%= item.product_type %></p>
+          </div>
+        </div>
+      <% end %>
+
     </div>
-  <% end %>
+  </div>
+
 </div>
