--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -10,9 +10,6 @@ $menu-background: #F5F5F5;
 $menu-line: #D25A70;
 $accent-color: #FF1744;
 
-.target {
-  border: 3px solid $accent-color;
-}
 
 body {
   color: $default-font-color;
@@ -30,8 +27,18 @@ h3, h4 {
 }
 
 hr {
-  border-width: 3px;
-  margin: 5px;
+  border-width: 0.2rem;
+  margin: 0.5rem;
+}
+
+.top-line {
+  height: 0.2rem; 
+  width: 100%; 
+  background-color: $accent-color;
+}
+
+.target {
+  border: 0.2rem solid $accent-color;
 }
 
 a:hover {
@@ -39,19 +46,20 @@ a:hover {
 }
 
 .menu-link {
-  border-bottom: 3px solid $menu-background;
-  margin: 0 20px 0 0;
+  border-bottom: 0.2rem solid $menu-background;
+  margin: 0 1rem 0 0;
 }
 
 .menu-link:hover {
-  border-bottom: 3px solid $accent-color;
+  border-bottom: 0.2rem solid $accent-color;
 }
 
 .swatch-box {
   width: 150px;
   height: 150px;
   float: left;
-  margin: 5px;
+  margin: 0.5rem;
+  transition: 0.2s ease;   
   }
 
 #hide, #alsoHide {
@@ -59,18 +67,23 @@ a:hover {
 }
 
 .swatch-box:hover {
-  border: 3px solid $menu-line;
+  border: 0.2rem solid $menu-line;
+  transition: 0.2s ease;
  }
 
 .center {
   text-align: center;
 }
 
-.callout {
+.callout, .info-box {
   text-align: center;
   overflow: hidden;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   border-radius: 2px;
+}
+
+.info-box {
+  padding: 1rem;
 }
 
 .thumbnail {
@@ -79,22 +92,8 @@ a:hover {
 }
 
 .lead {
-  margin: 5px;
+  margin: 0.5rem;
 }
-
-.search-box {
-  width: 25%;
-  margin: auto;
-}
-
-// .product-box {
-//   transition: 1s ease; 
-// }
-
-// .product-box:hover {
-//   border: 3px solid $menu-line;
-//   transition: 1s ease;
-//  }
 
 .icon {
   transition: 0.5s ease;
@@ -106,7 +105,7 @@ a:hover {
 }
 
 .header {
-  background-image: url("/assets/header-bg.jpg");
+  background-image: url("https://s3-us-west-2.amazonaws.com/colorcrush/header-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 400px;
@@ -115,7 +114,7 @@ a:hover {
 }
 
 .header2 {
-  background-image: url("/assets/header2.jpg");
+  background-image: url("https://s3-us-west-2.amazonaws.com/colorcrush/header2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 300px;
@@ -125,7 +124,7 @@ a:hover {
 
 .header3 {
   padding: 10px; 
-  border: 3px solid #fff; 
+  border: 0.2rem solid #fff; 
   height: 100%;
 }
 
@@ -143,12 +142,19 @@ a:hover {
 }
 
 .button {
-  border: 3px solid $accent-color;
+  border: 0.2rem solid $accent-color;
   background: transparent;
 }
 
 .button:hover {
   color: #fff;
+}
+
+.fadeInSlow{
+  -webkit-animation: fadeIn 3s;
+  -moz-animation: fadeIn 3s;
+  -o-animation: fadeIn 3s;
+  animation: fadeIn 3s;
 }
 
 //start top bar
@@ -292,6 +298,7 @@ $logo-margin: - ($logo-width / 2);
   text-align: center;
   font-size: 1.2rem;
   padding: 1rem;
+  margin-top: 1rem;
   -webkit-box-shadow: 0px -5px 5px -5px rgba(0,0,0,0.3);
   -moz-box-shadow: 0px -5px 5px -5px rgba(0,0,0,0.3);
   box-shadow: 0px -5px 5px -5px rgba(0,0,0,0.3);
