--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,19 +1,24 @@
 <div class="row">
-
-  <div style="padding: 25px" class="small-12 medium-6 large-6 columns">
-
-    <h3>Add Product</h3> <br>
+  <div class="columns small-12 medium-6 large-6">
+    <h3>Add a Product</h3> <br>
 
     <%= form_tag '/search', method: :get do %>
 
-      Search for a makeup product:<br>
+      <span class="lead">Search for a makeup product:</span><br>
       <%= text_field_tag :keyword %>
       <%= submit_tag 'Search', class: 'button' %>
 
     <% end %> <br>
+  </div>
+</div>
 
-    Or add your own:<br>
+<div class="row">
+  <div class="lead" style="padding: 0 1rem">Or add your own:</div><br>
+  <div style="padding: 0 1rem" class="small-12 medium-6 large-6 columns">
+
     <%= form_tag '/products', method: :post, multipart: true do %>
+
+      <%= file_field_tag :image, id: 'preview', accept: 'image/png,image/gif,image/jpeg' %><br>
 
       <%= label_tag :name %>
       <%= text_field_tag :name %> <br>
@@ -24,29 +29,27 @@
       <%= label_tag :product_type %>
       <%= text_field_tag :product_type %> <br>
 
-      <%= file_field_tag :image, id: 'preview' %><br><br>
-
       <%= hidden_field_tag :red, nil, id: 'red' %>
       <%= hidden_field_tag :green, nil, id: 'green' %>
       <%= hidden_field_tag :blue, nil, id: 'blue' %>
 
-      <%= submit_tag 'Finish', class: 'button' %><br>
-
+      <%= submit_tag 'Finish', class: 'button' %>
     <% end %>
 
+      <div id="alsoHide" class="row">
+          Product Color:<br>
+          <div class="swatch-box" id="swatch" onclick="changeDominant()"></div>
+      </div>
   </div>
 
   <div style="padding: 25px" class="small-12 medium-6 large-6 columns">
     <div id="target"></div><br>
-    <div id="alsoHide">
-      Product Color:<br>
-      <div class="swatch-box" id="swatch" onclick="changeDominant()"></div><br>
-    </div>
   </div>
 
 </div>
 
-<div id="hide">
+
+<div id="hide" class="row">
   Not the right color? Choose from the following:<br>
   <% 9.times do |number| %>
     <div class="swatch-box" id="swatch<%= number %>" onclick="changeColor(<%= number %>)"> </div>
