--- a/app/views/products/browse.html.erb
+++ b/app/views/products/browse.html.erb
@@ -1,5 +1,5 @@
 <div class="row small-up-1 medium-up-3 large-up-4">
-<span class="lead">View All Products</span><br><br>
+<span class="lead">View All Products (<%= @products.length %>)</span><br><br>
   <% @products.each do |product| %>
     <div class="column">
       <div class="callout">    
