--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
       <div class="header3">      
         <span class="main-title animated fadeIn">ColorCrush</span>
         <div style="padding: 1rem">
-          <p class="fadeInSlow">Blurb goes here. <br> Blurb blurb blurb.<br> Bluuurb.</p>
+          <p class="fadeInSlow">Find dupes.</p>
         </div>
       </div>
     </div>
